Spruce up build tooling.
Move native-image generation into the Clojure build file, plus better
GraalVM detection and wrapping in the bin/build script.